# SSSr

other/sssr/headers/: ssserver.hpp
other/sssr/src/: CMakeLists.txt
src/: serverapp.cpp
